Creado mediante Colaboratory

--- a/Sesion03_Fundamentos.ipynb
+++ b/Sesion03_Fundamentos.ipynb
@@ -92,9 +92,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WftiMOIk4Xg-"
+        "id": "WftiMOIk4Xg-",
+        "outputId": "309d5dc7-0f8e-4b5b-a022-625aadbd0330",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "x = 10; y = 0\n",
         "if x== 4:\n",
         "    y = 1\n",
         "elif x == 5:\n",
@@ -102,10 +107,19 @@
         "elif x == 6:\n",
         "    y = 3\n",
         "else:\n",
-        "    y = 5"
+        "    y = 5\n",
+        "print(y)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -172,22 +186,31 @@
       "cell_type": "code",
       "metadata": {
         "id": "6LG1HfbE5mgK",
-        "outputId": "47a67e0a-5394-4341-b681-2ea7554e4968",
+        "outputId": "f2abf16b-80ae-4421-c301-e675c0bb38a2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 86
         }
       },
       "source": [
         "lista = [\"uno \", \"dos \", \"tres\"]\n",
-        "cad = \"\"\n",
-        "for ele in lista:\n",
-        "    cad += ele\n",
-        "\n",
-        "cad"
+        "cadena = \"\"\n",
+        "for posicion in lista:\n",
+        "    cadena += posicion\n",
+        "    print(cadena )\n",
+        "cadena"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "uno \n",
+            "uno dos \n",
+            "uno dos tres\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -201,7 +224,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 1
+          "execution_count": 2
         }
       ]
     },
