Creado mediante Colaboratory

--- a/Sesion03_Fundamentos.ipynb
+++ b/Sesion03_Fundamentos.ipynb
@@ -93,10 +93,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "WftiMOIk4Xg-",
-        "outputId": "309d5dc7-0f8e-4b5b-a022-625aadbd0330",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "309d5dc7-0f8e-4b5b-a022-625aadbd0330"
       },
       "source": [
         "x = 10; y = 0\n",
@@ -164,14 +164,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bc0OFCnH5GmH"
+        "id": "bc0OFCnH5GmH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "91d27e6b-e83f-45c2-95f2-cb17f8667a5d"
       },
       "source": [
         "for x in range (1,3):\n",
         "    print (x)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -186,11 +199,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "6LG1HfbE5mgK",
-        "outputId": "f2abf16b-80ae-4421-c301-e675c0bb38a2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 86
-        }
+        },
+        "outputId": "f2abf16b-80ae-4421-c301-e675c0bb38a2"
       },
       "source": [
         "lista = [\"uno \", \"dos \", \"tres\"]\n",
@@ -200,7 +213,7 @@
         "    print(cadena )\n",
         "cadena"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +261,8 @@
         "x = 0\n",
         "y = 3\n",
         "while x < y:\n",
-        "    print(x)\n",
+        "    #print(x)\n",
+        "    print(x,\" < \",y)\n",
         "    x += 1"
       ],
       "execution_count": null,
@@ -266,7 +280,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lMqK9SqC6Iad"
+        "id": "lMqK9SqC6Iad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fa04ced0-afde-4ac8-82b8-c89b5795f19d"
       },
       "source": [
         "x = 0\n",
@@ -275,12 +293,26 @@
         "    print (x)\n",
         "    x+=1\n",
         "    if x == 2:\n",
-        "        break\n",
+        "        print (\"La iteración para en 2\")  #Agregamos esta línea\n",
+        "        break   #Interrumpe o corta seguir con la iteración\n",
         "    else:\n",
-        "        print (\"x es igual a 2\")"
+        "        #print (x)\n",
+        "        print (\"x es igual a: \",x)\n",
+        "        "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "x es igual a:  1\n",
+            "1\n",
+            "La iteración para en 2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -296,27 +328,63 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2FhB4vN4622Q",
-        "outputId": "705bbdc6-1879-4bce-a923-b581f373f6fa",
+        "id": "TjOPFwKEUhmA"
+      },
+      "source": [
+        "# Imprime solo los pares y para los impares continua iterando. Es práctico, cumples: si o no la condición y continua la iteración.\n",
+        "for i in range (1, 10):\n",
+        "    if i % 2 != 0:\n",
+        "      continue\n",
+        "    print (i)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2FhB4vN4622Q"
+      },
+      "source": [
+        "# Cumple la condición de impar, lo impreme y continua. Para los pares simplemente continua iterando\n",
+        "for i in range (1, 10):\n",
+        "    if i % 2 != 0:\n",
+        "      print (i)\n",
+        "      continue"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gADtC2-xM2te",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a6c5ccb9-4b94-40f6-98c9-ec85a5b73c0c"
       },
       "source": [
         "for i in range (1, 10):\n",
         "    if i % 2 != 0:\n",
-        "        continue\n",
-        "    print (i)"
+        "      print (i+100)\n",
+        "    else:\n",
+        "      print (i)"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "101\n",
             "2\n",
+            "103\n",
             "4\n",
+            "105\n",
             "6\n",
-            "8\n"
+            "107\n",
+            "8\n",
+            "109\n"
           ],
           "name": "stdout"
         }
@@ -367,21 +435,64 @@
       "cell_type": "code",
       "metadata": {
         "id": "Di_m0JdP8l81",
-        "outputId": "0e84aaec-6eae-4b26-9b04-f5cd5cf803f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8bbc5371-c36d-46e2-9df8-bc72cffdd781"
       },
       "source": [
-        "def mensaje():\n",
-        "  print(\"Mi primera función\")"
+        "def funcion_mensaje():\n",
+        "  print(\"Mi primera función\")\n",
+        "  print(\"Saludando\")\n",
+        "\n",
+        "funcion_mensaje()"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mi primera función\n"
+            "Mi primera función\n",
+            "Saludando\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TtvChMoL0t8O",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aeb97663-af09-451a-f088-f249f0a52bb1"
+      },
+      "source": [
+        "def funcion_mensaje(nombre_cliente):\n",
+        "  print(\"Mi primera función\")\n",
+        "  print(\"Saludando al cliente:\",nombre_cliente)\n",
+        "\n",
+        "nombre = 'Juan Salinas'\n",
+        "funcion_mensaje(nombre)\n",
+        "\n",
+        "lista_nombres=['Juan','Marcelino','Claudia']\n",
+        "for nombre in lista_nombres:\n",
+        "  funcion_mensaje(nombre)\n"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mi primera función\n",
+            "Saludando al cliente: Juan Salinas\n",
+            "Mi primera función\n",
+            "Saludando al cliente: Juan\n",
+            "Mi primera función\n",
+            "Saludando al cliente: Marcelino\n",
+            "Mi primera función\n",
+            "Saludando al cliente: Claudia\n"
           ],
           "name": "stdout"
         }
@@ -410,10 +521,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Z2SNDT8i-CLO",
-        "outputId": "24c9d485-cf11-44b6-e638-70fd2141bcb6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e703fb67-5d62-4672-e314-49873b7c6d83"
       },
       "source": [
         "def resta(a, b):\n",
@@ -424,16 +535,11 @@
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "10"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
+          "output_type": "stream",
+          "text": [
+            "10\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -452,10 +558,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "azfWuAwn-nbR",
-        "outputId": "28f55c34-0624-4d36-aec4-5fee4e46e33b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "28f55c34-0624-4d36-aec4-5fee4e46e33b"
       },
       "source": [
         "def resta(a, b):\n",
@@ -494,11 +600,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "HXrmNPE1_Tsq",
-        "outputId": "ebf6fd6f-72cc-4531-cf12-326ba4047c6a",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 321
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2bfaa565-59b8-46cf-d49e-eb935faf8ae8"
       },
       "source": [
         "def resta(a=None, b=None):\n",
@@ -506,28 +611,21 @@
         "    print(\"Error, debes enviar dos números a la función\")\n",
         "  return a - b\n",
         "\n",
-        "resta()"
+        "resta(5,7)"
       ],
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "Error, debes enviar dos números a la función\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-13-6db9d1a48875>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mresta\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-13-6db9d1a48875>\u001b[0m in \u001b[0;36mresta\u001b[0;34m(a, b)\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Error, debes enviar dos números a la función\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mresta\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'NoneType' and 'NoneType'"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
         }
       ]
     },
@@ -546,10 +644,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "-6Y2hGw7_5fm",
-        "outputId": "7a1bd279-b6ee-46a3-9b30-42c04a4e1795",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7a1bd279-b6ee-46a3-9b30-42c04a4e1795"
       },
       "source": [
         "def prueba():\n",
@@ -595,10 +693,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "4t8eN2hAC7_1",
-        "outputId": "269507a9-0fa1-438a-8bc5-4d06a7950b6c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "817669eb-3f85-4dab-dbd7-b32d09b71342"
       },
       "source": [
         "class Persona(object):\n",
@@ -633,14 +731,16 @@
         "            return \"Desconocido\"\n",
         "\n",
         "variable_persona = Persona(71752728,\"Juan\",\"Salinas\",\"M\")            \n",
-        "print(variable_persona.getGenero())\n"
+        "print(variable_persona.getGenero())\n",
+        "print(variable_persona.hablar(\"hola\"))\n"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Masculino\n"
+            "Masculino\n",
+            "hola\n"
           ],
           "name": "stdout"
         }
@@ -661,11 +761,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "UJGvr0u2F663",
-        "outputId": "98936b64-095b-49b5-99a2-0e31ce7af941",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "5671ccb0-42f4-4e64-c141-b368cce6da0d"
       },
       "source": [
         "class Supervisor(Persona):\n",
@@ -693,7 +793,8 @@
         "\n",
         "\n",
         "supervisor1 = Supervisor(\"V-16987456\", \"Jen\", \"Paz\", \"M\", \"Técnico\")         \n",
-        "supervisor1.getGenero()"
+        "supervisor1.getGenero()\n",
+        "supervisor1.hablar('hola')"
       ],
       "execution_count": null,
       "outputs": [
@@ -704,13 +805,13 @@
               "type": "string"
             },
             "text/plain": [
-              "'Masculino'"
+              "'hola'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 32
         }
       ]
     }
